--- a/src/main/resources/templates/fragments/fragments.html
+++ b/src/main/resources/templates/fragments/fragments.html
@@ -19,7 +19,7 @@
                         <a class="nav-link" href="/">Main</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/saml">Profile</a>
+                        <a class="nav-link" href="/profile">Profile</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/re-login">Login</a>
